--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,6 +19,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+          submodules: true
     
     - uses: lukka/get-cmake@latest
     
@@ -27,6 +29,9 @@ jobs:
       id: runvcpkg
       with:
         vcpkgJsonGlob: 'vcpkg.json'
+    
+    - name: tree
+      run: tree ./
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
