--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,9 +29,13 @@ jobs:
       id: runvcpkg
       with:
         vcpkgJsonGlob: 'vcpkg.json'
+        runVcpkgInstall: true
     
-    - name: tree
-      run: tree ./
+    - name: pwd
+      run: pwd
+      
+    - name: echo
+      run: echo {{github.workspace}}
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
