--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,16 +31,10 @@ jobs:
         vcpkgJsonGlob: 'vcpkg.json'
         runVcpkgInstall: true
     
-    - name: pwd
-      run: pwd
-      
-    - name: echo
-      run: echo {{github.workspace}}
-
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DVCPKG_DIR={{github.workspace}}/vcpkg
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DVCPKG_DIR=${{github.workspace}}/vcpkg
 
     - name: Build
       # Build your program with the given configuration
