--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -57,4 +57,4 @@ jobs:
         # Artifact name
         name: output
         # A file, directory or wildcard pattern that describes what to upload
-        path: ${{github.workspace}}/build/notebook
+        path: ${{github.workspace}}/build
