--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -57,4 +57,6 @@ jobs:
         # Artifact name
         name: output
         # A file, directory or wildcard pattern that describes what to upload
-        path: ${{github.workspace}}/build
+        path: |
+          ${{github.workspace}}/build/notebook
+          ${{github.workspace}}/build/${{BUILD_TYPE}}
