--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -59,4 +59,4 @@ jobs:
         # A file, directory or wildcard pattern that describes what to upload
         path: |
           ${{github.workspace}}/build/notebook
-          ${{github.workspace}}/build/${{BUILD_TYPE}}
+          ${{github.workspace}}/build/${{env.BUILD_TYPE}}
