--- a/.github/workflows/msys.yml
+++ b/.github/workflows/msys.yml
@@ -28,7 +28,7 @@ jobs:
     - uses: msys2/setup-msys2@v2
       with:
         msystem: MINGW64
-        install: git gcc g++
+        install: git mingw-w64-x86_64-gcc mingw-w64-x86_64-g++
         update: true
 
     - uses: lukka/get-cmake@latest
@@ -42,11 +42,13 @@ jobs:
         runVcpkgFormatString: '[`install`, `--recurse`, `--clean-after-build`, `--x-install-root`, `$[env.VCPKG_INSTALLED_DIR]`, `--triplet`, `x64-mingw-static`]'
     
     - name: Configure CMake
+      shell: msys2 {0}
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: cmake -G "MinGW Makefiles" -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DVCPKG_DIR=${{github.workspace}}/vcpkg
 
     - name: Build
+      shell: msys2 {0}
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
