--- a/.github/workflows/msys.yml
+++ b/.github/workflows/msys.yml
@@ -28,7 +28,7 @@ jobs:
     - uses: msys2/setup-msys2@v2
       with:
         msystem: MINGW64
-        install: git mingw-w64-x86_64-gcc mingw-w64-x86_64-g++
+        install: git mingw-w64-x86_64-gcc
         update: true
 
     - uses: lukka/get-cmake@latest
