--- a/.github/workflows/msys.yml
+++ b/.github/workflows/msys.yml
@@ -28,7 +28,7 @@ jobs:
     - uses: msys2/setup-msys2@v2
       with:
         msystem: MINGW64
-        install: git cmake mingw-w64-x86_64-gcc
+        install: git cmake mingw-w64-x86_64-gcc make
         update: true
     
     - name: Restore artifacts, or setup vcpkg for building artifacts
@@ -43,7 +43,7 @@ jobs:
       shell: msys2 {0}
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DVCPKG_DIR=vcpkg
+      run: cmake -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DVCPKG_DIR=vcpkg -DVCPKG_TARGET_TRIPLET=x64-mingw-static
 
     - name: Build
       shell: msys2 {0}
