--- a/.github/workflows/msys.yml
+++ b/.github/workflows/msys.yml
@@ -36,8 +36,6 @@ jobs:
       id: runvcpkg
       with:
         vcpkgJsonGlob: 'vcpkg.json'
-        runVcpkgInstall: true
-        runVcpkgFormatString: '[`install`, `--recurse`, `--clean-after-build`, `--x-install-root`, `$[env.VCPKG_INSTALLED_DIR]`, `--triplet`, `x64-mingw-static`]'
     
     - name: Configure CMake
       shell: msys2 {0}
@@ -48,7 +46,7 @@ jobs:
     - name: Build
       shell: msys2 {0}
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build build --config ${{env.BUILD_TYPE}}
 
 #     - name: Test
 #       working-directory: ${{github.workspace}}/build
