--- a/.github/workflows/msys.yml
+++ b/.github/workflows/msys.yml
@@ -28,7 +28,7 @@ jobs:
     - uses: msys2/setup-msys2@v2
       with:
         msystem: MINGW64
-        install: mingw-w64-x86_64-cmake mingw-w64-x86_64-gcc mingw-w64-x86_64-make
+        install: mingw-w64-x86_64-cmake mingw-w64-x86_64-gcc mingw-w64-x86_64-make mingw-w64-x86_64-ninja
         update: true
     
     - name: Restore artifacts, or setup vcpkg for building artifacts
