--- a/.github/workflows/msys.yml
+++ b/.github/workflows/msys.yml
@@ -61,5 +61,5 @@ jobs:
         name: output
         # A file, directory or wildcard pattern that describes what to upload
         path: |
-          ${{github.workspace}}/build/notebook
+          ${{github.workspace}}/build/notebook.exe
           ${{github.workspace}}/build/${{env.BUILD_TYPE}}
